# enigma-engine

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-25-object-animation-inspector.md  2026-05-25-scene-authoring-core.md  2026-05-26-transform-gizmos.md
docs/superpowers/specs/: 2026-05-25-object-animation-inspector-design.md  2026-05-25-scene-authoring-core-design.md  2026-05-26-transform-gizmos-design.md
src/: main.rs  project.rs  ui.rs
src/editor/: actions.rs  mod.rs  state.rs
src/editor/gizmo/: grid.rs  math.rs  mod.rs  rotate.rs  scale.rs  toolbar.rs  translate.rs
src/editor/inspector/: animation.rs  camera.rs  light.rs  material_editor.rs  mesh_material.rs  mod.rs  particle_editor.rs  particle_instance.rs  resource_meta.rs  scene_settings.rs  terrain_editor.rs  transform.rs
src/editor/panels/: hierarchy.rs  inspector.rs  mod.rs  resource_browser.rs  toolbar.rs  viewport.rs
src/project/: material.rs  mod.rs  resource.rs  scene.rs
src/resources/: Cargo.toml.resource  main.rs.resource  mod.rs
src/ui/: mod.rs  project_window.rs  resource_window.rs
